--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>K.States – Enter Knot Data</title>
+  <title>K.States</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="centered">
     <h1>K.States</h1>
     <p>Enter PD notation and a fixed segment to visualize your state lattice.</p>
-    <textarea id="pd-input" placeholder="Enter PD notation here..."></textarea>
-    <input id="fixed-segment" type="number" placeholder="Enter fixed segment" />
-    <button onclick="submitData()">Submit</button>
+    <textarea id="pd-input" placeholder="Enter PD notation here...">1,7,2,6;2,5,3,6;5,12,4,11;4,10,3,11;1,8,16,7;16,13,15,12;13,8,14,9;14,10,15,9</textarea>
+    <div style="display: flex; gap: 1rem">
+      <input id="fixed-segment" type="number" placeholder="Enter segment" />
+      <button onclick="submitData()">Submit</button>
+    </div>
   </main>
   <a href="about.html" style="position: absolute; top: 1rem; right: 1rem; text-decoration: none; font-size: 1.2rem;">
   ℹ️
