--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <title>K.States</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <main class="centered">
-    <h1>K.States</h1>
+<body class="text-white d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+
+ <a href="about.html" style="position: absolute; top: 1rem; right: 1rem; text-decoration: none; font-size: 2rem; color: rgb(167, 186, 215);">
+  <i class="bi bi-info-circle-fill"></i>
+</a>
+
+  <div class="container justify-content-center align-items-center text-center m-3 rounded-4 shadow-sm bg-glass">
+    <h1 class="display-1 fw-bold" style="font-family: fantasy;">K.States</h1>
     <p>Enter PD notation and a fixed segment to visualize your state lattice.</p>
-    <textarea id="pd-input" placeholder="Enter PD notation here...">1,7,2,6;2,5,3,6;5,12,4,11;4,10,3,11;1,8,16,7;16,13,15,12;13,8,14,9;14,10,15,9</textarea>
-    <div style="display: flex; gap: 1rem">
-      <input id="fixed-segment" type="number" placeholder="Enter segment" />
-      <button onclick="submitData()">Submit</button>
+    <form class="mb-3">
+    <div class="mb-3">
+      <textarea id="pd-input" class="form-control" rows="3" placeholder="Enter PD notation here...">1,7,2,6;2,5,3,6;5,12,4,11;4,10,3,11;1,8,16,7;16,13,15,12;13,8,14,9;14,10,15,9</textarea>
     </div>
-  </main>
-  <a href="about.html" style="position: absolute; top: 1rem; right: 1rem; text-decoration: none; font-size: 1.2rem;">
-  ℹ️
-    </a>
+    <div class="row">
+      <div class="col">
+        <input id="fixed-segment" type="number" class="form-control" placeholder="Enter segment" />
+      </div>
+      <div class="col">
+        <button type="button" class="btn" style="background-color: rgb(167, 186, 215);" onclick="submitData()">Submit</button>
+      </div>
+    </div>
+  </form>
+  </div>
 
 
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js" integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
